--- a/example/react/public/index.html
+++ b/example/react/public/index.html
@@ -24,13 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>react-i18n-lite</title>
+    <title>I18n Lite React Example</title>
   </head>
 
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <div id="root"></div>
 
